plugins {
    id 'org.springframework.boot' version '3.4.5'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

group = 'com.school'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '21'
    targetCompatibility = '21'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.flywaydb:flyway-core'
    runtimeOnly 'com.h2database:h2'
    implementation 'com.google.apis:google-api-services-calendar:v3-rev20240111-2.0.0'
    implementation 'com.google.http-client:google-http-client-jackson2:1.44.1'
    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.36.0'
    implementation 'com.microsoft.playwright:playwright:1.59.0'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testCompileOnly 'org.projectlombok:lombok'
    testAnnotationProcessor 'org.projectlombok:lombok'
}

tasks.named('test') {
    useJUnitPlatform {
        // Exclude tests annotated with @Tag("manual") from the default test task
        excludeTags 'manual'
    }
}

// Run manual/integration-style tests explicitly with `./gradlew manualTest`
tasks.register('manualTest', Test) {
    group = 'verification'
    description = 'Run tests tagged with @Tag("manual")'
    useJUnitPlatform {
        includeTags 'manual'
    }
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
}

bootRun {
    systemProperty 'spring.profiles.active', 'local'
}
